fix: z-index values

--- a/src/scss/header/_burger.scss
+++ b/src/scss/header/_burger.scss
@@ -9,7 +9,7 @@
   gap: 0.6rem;
   left: 2rem;
   position: absolute;
-  z-index: 4;
+  z-index: 2;
   background-color: var(--white);
   border: 1px solid transparent;
   padding: 0.5rem;
